--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 0x00-python-hello_world/main.py
 0x00-python-hello_world/test.py
 0x02-python-import_modules/add_0.py
+0x02-python-import_modules/calculator_1.py
