--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 0x00-python-hello_world/test.py
 0x02-python-import_modules/add_0.py
 0x02-python-import_modules/calculator_1.py
+0x02-python-import_modules/__pycache__/calculator_1.cpython-38.pyc
