--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 0x02-python-import_modules/calculator_1.py
 0x02-python-import_modules/__pycache__/calculator_1.cpython-38.pyc
 0x03-python-data_structures/__pycache__/0-print_list_integer.cpython-38.pyc
+0x03-python-data_structures/__pycache__/1-element_at.cpython-38.pyc
