--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 0x03-python-data_structures/__pycache__/0-print_list_integer.cpython-38.pyc
 0x03-python-data_structures/__pycache__/1-element_at.cpython-38.pyc
 0x03-python-data_structures/__pycache__/2-replace_in_list.cpython-38.pyc
+0x03-python-data_structures/__pycache__/3-print_reversed_list_integer.cpython-38.pyc
