--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 0x03-python-data_structures/__pycache__/1-element_at.cpython-38.pyc
 0x03-python-data_structures/__pycache__/2-replace_in_list.cpython-38.pyc
 0x03-python-data_structures/__pycache__/3-print_reversed_list_integer.cpython-38.pyc
+0x03-python-data_structures/__pycache__/4-new_in_list.cpython-38.pyc
