--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 0x03-python-data_structures/__pycache__/2-replace_in_list.cpython-38.pyc
 0x03-python-data_structures/__pycache__/3-print_reversed_list_integer.cpython-38.pyc
 0x03-python-data_structures/__pycache__/4-new_in_list.cpython-38.pyc
+0x03-python-data_structures/__pycache__/5-no_c.cpython-38.pyc
