--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 0x03-python-data_structures/__pycache__/4-new_in_list.cpython-38.pyc
 0x03-python-data_structures/__pycache__/5-no_c.cpython-38.pyc
 0x03-python-data_structures/__pycache__/6-print_matrix_integer.cpython-38.pyc
+0x03-python-data_structures/__pycache__/7-add_tuple.cpython-38.pyc
