--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 0x03-python-data_structures/__pycache__/7-add_tuple.cpython-38.pyc
 0x03-python-data_structures/__pycache__/8-multiple_returns.cpython-38.pyc
 0x03-python-data_structures/__pycache__/9-max_integer.cpython-38.pyc
+0x03-python-data_structures/__pycache__/10-divisible_by_2.cpython-38.pyc
