--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 0x03-python-data_structures/__pycache__/8-multiple_returns.cpython-38.pyc
 0x03-python-data_structures/__pycache__/9-max_integer.cpython-38.pyc
 0x03-python-data_structures/__pycache__/10-divisible_by_2.cpython-38.pyc
+0x03-python-data_structures/__pycache__/11-delete_at.cpython-38.pyc
