--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 0x03-python-data_structures/__pycache__/10-divisible_by_2.cpython-38.pyc
 0x03-python-data_structures/__pycache__/11-delete_at.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/0-square_matrix_simple.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/1-search_replace.cpython-38.pyc
