--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 0x03-python-data_structures/__pycache__/11-delete_at.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/0-square_matrix_simple.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/1-search_replace.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/2-uniq_add.cpython-38.pyc
