--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 0x04-python-more_data_structures/__pycache__/0-square_matrix_simple.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/1-search_replace.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/2-uniq_add.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/3-common_elements.cpython-38.pyc
