--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 0x04-python-more_data_structures/__pycache__/1-search_replace.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/2-uniq_add.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/3-common_elements.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/7-update_dictionary.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/6-print_sorted_dictionary.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/5-number_keys.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/4-only_diff_elements.cpython-38.pyc
