--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 0x04-python-more_data_structures/__pycache__/6-print_sorted_dictionary.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/5-number_keys.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/4-only_diff_elements.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/8-simple_delete.cpython-38.pyc
