--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 0x04-python-more_data_structures/__pycache__/5-number_keys.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/4-only_diff_elements.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/8-simple_delete.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/9-multiply_by_2.cpython-38.pyc
