--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 0x04-python-more_data_structures/__pycache__/4-only_diff_elements.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/8-simple_delete.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/9-multiply_by_2.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/11-multiply_list_map.cpython-38.pyc
+0x04-python-more_data_structures/__pycache__/10-best_score.cpython-38.pyc
