--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 0x04-python-more_data_structures/__pycache__/9-multiply_by_2.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/11-multiply_list_map.cpython-38.pyc
 0x04-python-more_data_structures/__pycache__/10-best_score.cpython-38.pyc
+0x05-python-exceptions/__pycache__/1-safe_print_integer.cpython-38.pyc
