--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 0x04-python-more_data_structures/__pycache__/10-best_score.cpython-38.pyc
 0x05-python-exceptions/__pycache__/1-safe_print_integer.cpython-38.pyc
 0x05-python-exceptions/__pycache__/3-safe_print_division.cpython-38.pyc
+0x05-python-exceptions/__pycache__/4-list_division.cpython-38.pyc
