--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 0x05-python-exceptions/__pycache__/1-safe_print_integer.cpython-38.pyc
 0x05-python-exceptions/__pycache__/3-safe_print_division.cpython-38.pyc
 0x05-python-exceptions/__pycache__/4-list_division.cpython-38.pyc
+0x05-python-exceptions/__pycache__/5-raise_exception.cpython-38.pyc
+0x05-python-exceptions/__pycache__/6-raise_exception_msg.cpython-38.pyc
