--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 0x05-python-exceptions/__pycache__/4-list_division.cpython-38.pyc
 0x05-python-exceptions/__pycache__/5-raise_exception.cpython-38.pyc
 0x05-python-exceptions/__pycache__/6-raise_exception_msg.cpython-38.pyc
+0x06-python-classes/__pycache__/1-square.cpython-38.pyc
