--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 0x05-python-exceptions/__pycache__/5-raise_exception.cpython-38.pyc
 0x05-python-exceptions/__pycache__/6-raise_exception_msg.cpython-38.pyc
 0x06-python-classes/__pycache__/1-square.cpython-38.pyc
+0x06-python-classes/__pycache__/2-square.cpython-38.pyc
