--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 0x05-python-exceptions/__pycache__/6-raise_exception_msg.cpython-38.pyc
 0x06-python-classes/__pycache__/1-square.cpython-38.pyc
 0x06-python-classes/__pycache__/2-square.cpython-38.pyc
+0x06-python-classes/__pycache__/3-square.cpython-38.pyc
