--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 0x06-python-classes/__pycache__/1-square.cpython-38.pyc
 0x06-python-classes/__pycache__/2-square.cpython-38.pyc
 0x06-python-classes/__pycache__/3-square.cpython-38.pyc
+0x06-python-classes/__pycache__/4-square.cpython-38.pyc
