--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 0x06-python-classes/__pycache__/4-square.cpython-38.pyc
 0x06-python-classes/__pycache__/5-square.cpython-38.pyc
 0x08-python-more_classes/__pycache__/0-rectangle.cpython-38.pyc
+0x08-python-more_classes/__pycache__/1-rectangle.cpython-38.pyc
