--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 0x08-python-more_classes/__pycache__/0-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/1-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/2-rectangle.cpython-38.pyc
+0x08-python-more_classes/__pycache__/3-rectangle.cpython-38.pyc
