--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 0x08-python-more_classes/__pycache__/1-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/2-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/3-rectangle.cpython-38.pyc
+0x08-python-more_classes/__pycache__/4-rectangle.cpython-38.pyc
