--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@
 0x08-python-more_classes/__pycache__/2-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/3-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/4-rectangle.cpython-38.pyc
+0x08-python-more_classes/__pycache__/5-rectangle.cpython-38.pyc
