--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 0x08-python-more_classes/__pycache__/3-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/4-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/5-rectangle.cpython-38.pyc
+0x08-python-more_classes/__pycache__/6-rectangle.cpython-38.pyc
