--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@
 0x08-python-more_classes/__pycache__/5-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/6-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/7-rectangle.cpython-38.pyc
+0x08-python-more_classes/__pycache__/8-rectangle.cpython-38.pyc
