Adding initial files

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@
 0x08-python-more_classes/__pycache__/7-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/8-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/9-rectangle.cpython-38.pyc
+0x09-python-everything_is_object/__pycache__/100-magic_string.cpython-38.pyc
