--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@
 0x08-python-more_classes/__pycache__/8-rectangle.cpython-38.pyc
 0x08-python-more_classes/__pycache__/9-rectangle.cpython-38.pyc
 0x09-python-everything_is_object/__pycache__/100-magic_string.cpython-38.pyc
+0x07-python-test_driven_development/__pycache__/0-add_integer.cpython-38.pyc
