--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@
 0x09-python-everything_is_object/__pycache__/100-magic_string.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/0-add_integer.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/3-say_my_name.cpython-38.pyc
+0x07-python-test_driven_development/__pycache__/4-print_square.cpython-38.pyc
