--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@
 0x07-python-test_driven_development/__pycache__/0-add_integer.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/3-say_my_name.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/4-print_square.cpython-38.pyc
+0x07-python-test_driven_development/__pycache__/5-text_indentation.cpython-38.pyc
