--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 0x07-python-test_driven_development/__pycache__/3-say_my_name.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/4-print_square.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/5-text_indentation.cpython-38.pyc
+0x07-python-test_driven_development/tests/__pycache__/6-max_integer_test.cpython-38.pyc
+0x07-python-test_driven_development/__pycache__/6-max_integer.cpython-38.pyc
