--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@
 0x07-python-test_driven_development/__pycache__/5-text_indentation.cpython-38.pyc
 0x07-python-test_driven_development/tests/__pycache__/6-max_integer_test.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/6-max_integer.cpython-38.pyc
+0x07-python-test_driven_development/__pycache__/2-matrix_divided.cpython-38.pyc
