--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@
 0x07-python-test_driven_development/tests/__pycache__/6-max_integer_test.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/6-max_integer.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/2-matrix_divided.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/0-lookup.cpython-38.pyc
