--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 0x07-python-test_driven_development/__pycache__/6-max_integer.cpython-38.pyc
 0x07-python-test_driven_development/__pycache__/2-matrix_divided.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/0-lookup.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/1-my_list.cpython-38.pyc
