--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@
 0x07-python-test_driven_development/__pycache__/2-matrix_divided.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/0-lookup.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/1-my_list.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/5-base_geometry.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/4-inherits_from.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/3-is_kind_of_class.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/2-is_same_class.cpython-38.pyc
