--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@
 0x0A-python-inheritance/__pycache__/4-inherits_from.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/3-is_kind_of_class.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/2-is_same_class.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/7-base_geometry.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/6-base_geometry.cpython-38.pyc
