--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@
 0x0A-python-inheritance/__pycache__/2-is_same_class.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/7-base_geometry.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/6-base_geometry.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/8-rectangle.cpython-38.pyc
