--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@
 0x0A-python-inheritance/__pycache__/7-base_geometry.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/6-base_geometry.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/8-rectangle.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/9-rectangle.cpython-38.pyc
