--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@
 0x0A-python-inheritance/__pycache__/8-rectangle.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/9-rectangle.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/10-square.cpython-38.pyc
+0x0A-python-inheritance/__pycache__/11-square.cpython-38.pyc
