Adding initial files

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@
 0x0A-python-inheritance/__pycache__/9-rectangle.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/10-square.cpython-38.pyc
 0x0A-python-inheritance/__pycache__/11-square.cpython-38.pyc
+0x0B-python-input_output/__pycache__/0-read_file.cpython-38.pyc
+0x0B-python-input_output/__pycache__/1-write_file.cpython-38.pyc
