--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@
 0x0A-python-inheritance/__pycache__/11-square.cpython-38.pyc
 0x0B-python-input_output/__pycache__/0-read_file.cpython-38.pyc
 0x0B-python-input_output/__pycache__/1-write_file.cpython-38.pyc
+0x0B-python-input_output/__pycache__/2-append_write.cpython-38.pyc
