Adding task 3 and fixing task 1 and task 2

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@
 0x0B-python-input_output/__pycache__/0-read_file.cpython-38.pyc
 0x0B-python-input_output/__pycache__/1-write_file.cpython-38.pyc
 0x0B-python-input_output/__pycache__/2-append_write.cpython-38.pyc
+0x0B-python-input_output/__pycache__/3-to_json_string.cpython-38.pyc
