Task 6 first commit

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@
 0x0B-python-input_output/my_dict.json
 0x0B-python-input_output/my_set.json
 0x0B-python-input_output/__pycache__/5-save_to_json_file.cpython-38.pyc
+0x0B-python-input_output/__pycache__/6-load_from_json_file.cpython-38.pyc
