Task 8 first commit

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@
 0x0B-python-input_output/my_set.json
 0x0B-python-input_output/__pycache__/5-save_to_json_file.cpython-38.pyc
 0x0B-python-input_output/__pycache__/6-load_from_json_file.cpython-38.pyc
+0x0B-python-input_output/__pycache__/8-class_to_json.cpython-38.pyc
+0x0B-python-input_output/__pycache__/8-my_class_2.cpython-38.pyc
