--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@
 0x0B-python-input_output/__pycache__/6-load_from_json_file.cpython-38.pyc
 0x0B-python-input_output/__pycache__/8-class_to_json.cpython-38.pyc
 0x0B-python-input_output/__pycache__/8-my_class_2.cpython-38.pyc
+0x0B-python-input_output/__pycache__/9-student.cpython-38.pyc
