Task 11 first commit

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@
 0x0B-python-input_output/__pycache__/8-my_class_2.cpython-38.pyc
 0x0B-python-input_output/__pycache__/9-student.cpython-38.pyc
 0x0B-python-input_output/__pycache__/10-student.cpython-38.pyc
+0x0B-python-input_output/__pycache__/11-student.cpython-38.pyc
+0x0B-python-input_output/student.json
