--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@
 0x0B-python-input_output/__pycache__/10-student.cpython-38.pyc
 0x0B-python-input_output/__pycache__/11-student.cpython-38.pyc
 0x0B-python-input_output/student.json
+0x0C-python-almost_a_circle/models/__pycache__/__init__.cpython-38.pyc
+0x0C-python-almost_a_circle/models/__pycache__/base.cpython-38.pyc
