--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@
 0x0C-python-almost_a_circle/models/__pycache__/__init__.cpython-38.pyc
 0x0C-python-almost_a_circle/models/__pycache__/base.cpython-38.pyc
 0x0C-python-almost_a_circle/models/__pycache__/rectangle.cpython-38.pyc
+0x0C-python-almost_a_circle/models/__pycache__/square.cpython-38.pyc
