--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@
 0x0C-python-almost_a_circle/models/__pycache__/rectangle.cpython-38.pyc
 0x0C-python-almost_a_circle/models/__pycache__/square.cpython-38.pyc
 0x0C-python-almost_a_circle/Rectangle.json
+0x0C-python-almost_a_circle/Square.json
