--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@
 0x0C-python-almost_a_circle/models/__pycache__/square.cpython-38.pyc
 0x0C-python-almost_a_circle/Rectangle.json
 0x0C-python-almost_a_circle/Square.json
+0x0F-python-object_relational_mapping/__pycache__/model_state.cpython-38.pyc
