--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@
 0x0C-python-almost_a_circle/Rectangle.json
 0x0C-python-almost_a_circle/Square.json
 0x0F-python-object_relational_mapping/__pycache__/model_state.cpython-38.pyc
+0x0F-python-object_relational_mapping/__pycache__/model_city.cpython-38.pyc
