--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@
 0x0C-python-almost_a_circle/Square.json
 0x0F-python-object_relational_mapping/__pycache__/model_state.cpython-38.pyc
 0x0F-python-object_relational_mapping/__pycache__/model_city.cpython-38.pyc
+0x11-python-network_1/apy.py
